// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`episode mutations matches expected output: DeleteWatchedEpisode.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
mutation {
  deleteWatchedEpisode(episodeId: "ZXBpc29kZTo2") {
    success
    episode {
      id
    }
  }
}
~~~~~~~~~~ OUTPUT ~~~~~~~~~~
{
  "data": {
    "deleteWatchedEpisode": {
      "success": true,
      "episode": {
        "id": "RXBpc29kZTo2"
      }
    }
  }
}
`;

exports[`episode mutations matches expected output: MarkAsWatched.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
mutation {
  markAsWatched(episodeId: "ZXBpc29kZTo2") {
    success
    episode {
      id
    }
  }
}
~~~~~~~~~~ OUTPUT ~~~~~~~~~~
{
  "data": {
    "markAsWatched": {
      "success": true,
      "episode": {
        "id": "RXBpc29kZTo2"
      }
    }
  }
}
`;
